# virtual_exec

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs
tests/: test_exec.rs
virtual_exec_core/: Cargo.toml  README.md
virtual_exec_core/src/: lib.rs  machine.rs
virtual_exec_core/src/config/: mod.rs  recurse.rs
virtual_exec_core/src/fn_extern/: fn_args.rs  mod.rs  resolver.rs
virtual_exec_core/src/sequential/: compile.rs  exec.rs  instructions.rs  mod.rs
virtual_exec_core/tests/: execution_test.rs  sequential_test.rs  test_exec.rs
virtual_exec_extern/: Cargo.toml  README.md
virtual_exec_extern/src/: example.rs  lib.rs
virtual_exec_macro/: Cargo.toml  README.md
virtual_exec_macro/src/: lib.rs
virtual_exec_macro/tests/: compile_test.rs  macro_test.rs
virtual_exec_parser/: Cargo.toml  README.md
virtual_exec_parser/src/: error.rs  lib.rs  parser.rs  tokenizer.rs
virtual_exec_parser/src/sequential/: compile.rs  exec.rs  instructions.rs  mod.rs
virtual_exec_parser/tests/: execution_test.rs  sequential_test.rs
virtual_exec_repl/: Cargo.toml  README.md
virtual_exec_repl/src/: app.rs  main.rs  override.rs  override_print.rs  ui.rs
virtual_exec_repl/src/component/: dyn_tree.rs  mod.rs
virtual_exec_std/: Cargo.toml  README.md
virtual_exec_std/src/: lib.rs
virtual_exec_std/src/func/: arr_get_from_idx.rs  arr_get_len.rs  concat.rs  create_array.rs  create_obj.rs  dir.rs  mod.rs  pop_array.rs  push_array.rs
virtual_exec_std/src/sys/: mod.rs  print.rs
virtual_exec_std/tests/: test_arr.rs  test_mem.rs  test_sys.rs
virtual_exec_type/: Cargo.toml  README.md
virtual_exec_type/src/: alloc.rs  base.rs  builtin.rs  error.rs  exec_ctx.rs  ext.rs  lib.rs  mem.rs  op.rs  op_impl.rs
virtual_exec_type/src/ast/: core.rs
virtual_exec_type/src/config/: mod.rs  recurse.rs
virtual_exec_type/tests/: base_test.rs  mem_test.rs  op_test.rs
