[package]
name = "virtual_exec"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/virtual_exec"
authors = ["i-am-unknown-81514525" ]
license-file = "LICENSE"
description = "A sandbox execution environment which allowed limited execution of expression safely (WIP)"
readme = "README.md"

[dependencies]
virtual_exec_type = { path = "virtual_exec_type", version = "0.3.0"}
virtual_exec_parser = { path = "virtual_exec_parser", version = "0.3.0"}

[workspace]
members = [
    "virtual_exec_type",
    "virtual_exec_macro",
    "virtual_exec_parser",
]
