[package]
name = "virtual_exec"
version = "0.5.0-alpha.0"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/virtual_exec"
authors = ["i-am-unknown-81514525" ]
readme = "README.md"
description = "A sandbox execution environment which allowed limited execution of expression safely (WIP)"
license = "GPL-3.0"

[dependencies]
virtual_exec_core = {path = "virtual_exec_core", version = "0.5.0-alpha.0"}

[workspace]
members = [
    "virtual_exec_type",
    "virtual_exec_macro",
    "virtual_exec_parser",
    "virtual_exec_core",
    "virtual_exec_extern",
    "virtual_exec_std",
]
