[package]
name = "virtual_exec_extern"
version = "0.4.0"
edition = "2024"

[dependencies]
virtual_exec_macro = {path = "../virtual_exec_macro", version = "0.4.0"}
virtual_exec_core = {path = "../virtual_exec_core", version = "0.4.0"}
virtual_exec_type = {path = "../virtual_exec_type", version = "0.4.0"}
async-trait = "0.1.89"