[package]
name = "virtual_exec_extern"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/virtual_exec"
authors = ["i-am-unknown-81514525" ]
license-file = "LICENSE"
readme = "README.md"
description = "Sub-crate of virtual_exec - provide macro definition for building external function"

[dependencies]
virtual_exec_macro = {path = "../virtual_exec_macro", version = "0.4.0"}
virtual_exec_core = {path = "../virtual_exec_core", version = "0.4.0"}
virtual_exec_type = {path = "../virtual_exec_type", version = "0.4.0"}
async-trait = "0.1.89"