[package]
name = "virtual_exec_extern"
version = "0.5.0-alpha.1"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/virtual_exec"
authors = ["i-am-unknown-81514525" ]
license = "GPL-3.0"
readme = "README.md"
description = "Sub-crate of virtual_exec - provide macro definition for building external function"

[dependencies]
virtual_exec_macro = {path = "../virtual_exec_macro", version = "0.5.0-alpha.1"}
virtual_exec_core = {path = "../virtual_exec_core", version = "0.5.0-alpha.1"}
virtual_exec_type = {path = "../virtual_exec_type", version = "0.5.0-alpha.1"}
async-trait = "0.1.89"
