[package]
name = "virtual_exec_macro"
version = "0.5.0-alpha.2"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/virtual_exec"
authors = ["i-am-unknown-81514525" ]
license = "GPL-3.0"
description = "Peocedural Macro definition sub-crate for virtual_exec - A sandbox execution environment which allowed limited execution of expression safely (WIP)"
readme = "README.md"


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
virtual_exec_type = { path = "../virtual_exec_type", version = "0.5.0-alpha.1" }
virtual_exec_parser = { path = "../virtual_exec_parser", version = "0.5.0-alpha.1" }
virtual_exec_core = { path = "../virtual_exec_core", version = "0.5.0-alpha.1"}
quote = "1.0"
proc-macro2 = "1.0"
paste = "1.0.15"

[dev-dependencies]
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
async-lock = "3.4.2"
