[package]
name = "virtual_exec_parser"
version = "0.5.0-alpha.1"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/virtual_exec"
authors = ["i-am-unknown-81514525" ]
description = "Sub-crate for virtual_exec - provide the parsing logic for the language"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
virtual_exec_type = { path = "../virtual_exec_type", version = "0.5.0-alpha.0" }

[dev-dependencies]
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
