[package]
name = "virtual_exec_repl"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.5"
ratatui-interact = "0.5.3"
virtual_exec_type = {path = "../virtual_exec_type", version = "0.5.0-alpha.1"}
virtual_exec_core = {path = "../virtual_exec_core", version = "0.5.0-alpha.1"}
virtual_exec_std = {path = "../virtual_exec_std", version = "0.5.0-alpha.1"}
virtual_exec_macro = {path = "../virtual_exec_macro", version = "0.5.0-alpha.1"}
virtual_exec_extern = {path = "../virtual_exec_extern", version = "0.5.0-alpha.1"}
cfg-if = "1.0.4"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
