[package]
name = "virtual_exec_std"
version = "0.5.0-alpha.0"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/virtual_exec"
authors = ["i-am-unknown-81514525" ]
readme = "README.md"
description = "Sub-crate of virtual_exec - provide standard library definition for the language"
license = "GPL-3.0"

[dependencies]
virtual_exec_extern = {path = "../virtual_exec_extern", version = "0.5.0-alpha.0"}
virtual_exec_type = {path = "../virtual_exec_type", version = "0.5.0-alpha.0"}
virtual_exec_core = {path = "../virtual_exec_core", version = "0.5.0-alpha.0"}
async-lock = "3.4.2"
tokio = {version = "1.52.1", optional = true}
cfg-if = "1.0.4"
async-trait = { version = "0.1.89", optional = true }

[features]
sys = []
async = ["dep:async-trait"]
tokio = ["dep:tokio", "async"]
tokio-net = ["tokio", "tokio/net"]
tokio-fs  = ["tokio", "tokio/fs"]
tokio-io = ["tokio", "tokio/io-std", "tokio/io-util"]
tokio-full = ["sys", "tokio-net", "tokio-fs", "tokio/process", "tokio-io"]
full = ["tokio-full"]
default = ["full"]