[package]
name = "virtual_exec_type"
version = "0.5.0-alpha.2"
edition = "2024"
repository = "https://github.com/i-am-unknown-81514525/virtual_exec"
authors = ["i-am-unknown-81514525" ]
description = "Sub-crate for virtual_exec - Provide memory allocation, type and error definition for the language"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
async-lock = "3.4.2"
inventory = "0.3.21"
paste = "1.0.15"

